<resources>
    <string name="app_name">Authentication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phonenumber_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="email_hint">Email</string>
    <string name="register_button_text">Register</string>
    <string name="register_here">Register Here</string>
    <string name="forgot_password_button_text">Send OTP</string>
    <string name="fp_here">Forgot Password?</string>
    <string name="otp_hint">OTP</string>
    <string name="validate_otp_button_text">Validate</string>
    <string name="update_password_button_text">Update Password</string>
</resources>
