<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.kdd.authentication.ui.vwmdl.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fgmt.Register">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:hint="@string/firstname_hint"
            android:text="@={registerViewModel.firstname}"
            android:autofillHints="" tools:targetApi="26"
            />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstname"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:hint="@string/lastname_hint"
            android:text="@={registerViewModel.lastname}"
            android:autofillHints="" tools:targetApi="26"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastname"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:text="@={registerViewModel.email}"
            android:autofillHints="" tools:targetApi="26"
            />

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="phone"
            android:hint="@string/phonenumber_hint"
            android:text="@={registerViewModel.phonenumber + ``}"
            android:autofillHints="" tools:targetApi="26"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:text="@={registerViewModel.password}"
            android:autofillHints="" tools:targetApi="26"
            />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/register_button_text"
            android:onClick="@{registerViewModel::onRegister}"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>